npm install webpack using the flag --save-dev because webpack is only used for development not for production, so to install the dependencies run npm install

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lucasdutraf/FazBem/issues"
   },
-  "homepage": "https://github.com/lucasdutraf/FazBem#readme"
+  "homepage": "https://github.com/lucasdutraf/FazBem#readme",
+  "devDependencies": {
+    "webpack": "^4.12.0"
+  }
 }
