Adding the entry point for the project and the output after running npm build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "https://faz-bem.firebaseapp.com/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack public/js/app.js dist/bundle.js"
   },
   "repository": {
     "type": "git",
