--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "fazbem",
+  "name": "FazBem",
   "version": "1.0.0",
   "description": "https://faz-bem.firebaseapp.com/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack public/js/app.js dist/bundle.js"
+    "build:prod": "webpack -p"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lucasdutraf/FazBem.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/lucasdutraf/FazBem#readme",
   "devDependencies": {
-    "webpack": "^4.12.0"
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
   }
 }
